Opened 14 years ago

Closed 14 years ago

#1393 closed defect (fixed)

mpc7 crash

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: mpc crash
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.mplayerhq.hu/flac/24-bit_192kHz.flac

(gdb) r -acodec mpc7 -i 24-bit_192kHz.flac -f null -
Starting program: d:\mingw\msys\1.0\ffmpeg-head-ab7d6cb\ffmpeg_g.exe -acodec mpc
7 -i 24-bit_192kHz.flac -f null -
[New Thread 2908.0xb68]
ffmpeg version 0.10.2.git-ab7d6cb Copyright (c) 2000-2012 the FFmpeg developers
  built on May 30 2012 13:37:47 with gcc 4.6.1
  configuration: --disable-ffprobe --enable-gpl
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[mpc7 @ 03bbc7c0] Warning: not compiled with thread support, using thread emulat
ion
[flac @ 03bb2340] max_analyze_duration 5000000 reached at 5004000
Input #0, flac, from '24-bit_192kHz.flac':
  Duration: 00:00:04.60, bitrate: 5042 kb/s
    Stream #0:0: Audio: musepack7, 192000 Hz, stereo, s16
[pcm_s16le @ 0412cb60] Warning: not compiled with thread support, using thread e
mulation
[mpc7 @ 03bbc7c0] Warning: not compiled with thread support, using thread emulat
ion
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf54.6.101
    Stream #0:0: Audio: pcm_s16le, 192000 Hz, stereo, s16, 6144 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (mpc7 -> pcm_s16le)
Press [q] to stop, [?] for help
warning: HEAP[ffmpeg_g.exe]:
warning: Heap block at 03BBFC48 modified at 03BBFFF0 past requested size of 3a0


Program received signal SIGTRAP, Trace/breakpoint trap.
0x7c90120f in ntdll!DbgUiConnectToDbg () from C:\WINDOWS\system32\ntdll.dll
(gdb) bt
#0  0x7c90120f in ntdll!DbgUiConnectToDbg ()
   from C:\WINDOWS\system32\ntdll.dll
#1  0x7c96ee31 in ntdll!RtlpNtMakeTemporaryKey ()
   from C:\WINDOWS\system32\ntdll.dll
#2  0x7c95f8f4 in ntdll!RtlZeroHeap () from C:\WINDOWS\system32\ntdll.dll
#3  0x03bbfc48 in ?? ()
#4  0x7c96f1ff in ntdll!RtlpNtMakeTemporaryKey ()
   from C:\WINDOWS\system32\ntdll.dll
#5  0x7c970456 in ntdll!RtlpNtMakeTemporaryKey ()
   from C:\WINDOWS\system32\ntdll.dll
#6  0x7c94bafc in ntdll!LdrFindEntryForAddress ()
   from C:\WINDOWS\system32\ntdll.dll
#7  0x03bb0000 in ?? ()
#8  0x7c91a1ba in ntdll!RtlpUnWaitCriticalSection ()
   from C:\WINDOWS\system32\ntdll.dll
#9  0x77c1c2de in msvcrt!free () from C:\WINDOWS\system32\msvcrt.dll
#10 0x03bb0000 in ?? ()
#11 0x0053fa3c in audio_get_buffer (frame=0x4215b60, avctx=0x3bbc7c0)
    at libavcodec/utils.c:340
#12 avcodec_default_get_buffer (avctx=0x3bbc7c0, frame=0x4215b60)
    at libavcodec/utils.c:547
#13 0x008a8f66 in mpc7_decode_frame (avctx=0x3bbc7c0, data=0x3bdb1c0,
    got_frame_ptr=0x22e8bc, avpkt=0x22e5b8) at libavcodec/mpc7.c:232
#14 0x00542887 in avcodec_decode_audio4 (avctx=0x3bbc7c0, frame=0x3bdb1c0,
    got_frame_ptr=0x22e8bc, avpkt=0x22e7f0) at libavcodec/utils.c:1576
#15 0x0040ce24 in decode_audio (got_output=<optimized out>,
    pkt=<optimized out>, ist=<optimized out>) at ffmpeg.c:2540
#16 output_packet (ist=0x3bd9f20, pkt=0x22fbb0) at ffmpeg.c:2813
#17 0x0040e723 in transcode () at ffmpeg.c:3662
#18 0x00b12f42 in main (argc=8, argv=0x3bc0dd0) at ffmpeg.c:5926
(gdb)

Change History (2)

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: mpc crash added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.